--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@wojtekmaj/react-daterange-picker": "^3.3.2",
+    "async": "^3.2.4",
     "date-fns": "^2.25.0",
+    "jsonwebtoken": "^9.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
