--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "async": "^3.2.4",
     "date-fns": "^2.25.0",
     "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
